# dvc-test

./: .gitignore  Dockerfile  dlbeautygoodsimagesr.dvc  dvc-test.yaml  my_data.dvc  oss.config  pyproject.toml  test_data.dvc  tryon-pdefined.dvc
.dvc/: config
