[project]
name = "dvc-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "xr",email = "xr@meitu.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dvc = ">=3.61.0,<4.0.0"
dvc-oss = ">=3.0.0,<4.0.0"

# --- Pin the entire network stack to a known-stable configuration ---
fsspec = "2024.12.0"
ossfs = "2023.12.0"
aiooss2 = "0.2.10"
aiohttp = "3.9.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
