[project]
name = "dvc-test"
version = "0.1.0"
description = ""
authors = [
    {name = "xr",email = "xr@meitu.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dvc = ">=3.61.0,<4.0.0"
dvc-oss = ">=3.0.0,<4.0.0"

# --- Pin the entire network stack to a known-stable configuration ---
ossfs = "2025.5.0"
aiohttp = "3.9.5"
dvc-s3 = "^3.2.2"
# enforce addressing_style to use virtual host
s3fs = { git = "https://github.com/vjoke/s3fs.git", tag = "2025.7.2" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
